--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <hr/>
 <footer>
-<div><a href="https://github.com/BLumia/Mutter">Mutter</a> build with <i class="i i-heart"></i> on <i class="i i-octodex"></i> </div>
-<div>{{ site.footer-copyright }}</div>
+<div>{{ site.footer-text | default: "Theme using jekyll-theme-mutter"}} </div>
+<div>{{ site.footer-copyright | default: "All right reserved" }}</div>
 </footer>
