--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -11,6 +11,7 @@ layout: default
     {%- for post in site.posts -%}
     {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
       <h4>
+        <a href='{{ post.url | relative_url }}'>{{ post.title | escape }}</a>
         <small>{{ post.date | date: date_format }}</small>
       </h4>
       {%- if site.show_excerpts -%}
